<resources>
    <string name="app_name">MooVie</string>
    <string name="title_movies">Mortal Engines</string>
    <string name="ph_movies">Warner Bros</string>
    <string name="title_storyline">Storyline</string>
    <string name="lorem">On Cybertron, the Autobots, led by Optimus Prime, are on the verge of losing the Great
            Cybertronian War to their enemies, the Decepticons, and begin making preparations to
            leave the planet. The Decepticons led by Shockwave, Soundwave and Starscream ambush them
            during the evacuation, and Optimus sends a young scout, B-127, to Earth in order to set
            up a base of operations where the Autobots can regroup. B-127 reaches Earth alone in
            1987, crash-landing in California and disrupting a training exercise being conducted by
            Sector 7, a secret government agency that monitors extraterrestrial activity on Earth.
            Sector 7 agent Colonel Jack Burns presumes B-127 to be a hostile invader and attacks,
            driving B-127 into the forest, where he is then ambushed by the Decepticon Blitzwing.
            When B-127 refuses to reveal Optimus\' whereabouts, Blitzwing spitefully tears out his
            voice-box and damages his memory core. B-127 manages to destroy Blitzwing before
            collapsing from his wounds.</string>
    <string name="more">More</string>
    <string name="rating">5,7</string>
    <string name="movies_genre">Sci Fi, Thriller</string>
    <string name="title_movie_trailer">Movie Trailer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="search_hint">eg: Aquaman</string>
    <string name="top_rated">Top Rated</string>
</resources>