<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_row_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/blue_grey_50"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_poster_movie"
        android:layout_width="110dp"
        android:layout_height="160dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp">

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/poster_bumblebee" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/middle_view"
        android:layout_width="@dimen/spacing_large"
        android:layout_height="0dp"
        android:layout_toEndOf="@+id/cv_poster_movie" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/middle_view"
        android:gravity="start|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/title_movies"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ph_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/ph_movies"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40" />

        <TextView
            android:id="@+id/tv_movie_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:maxLines="3"
            android:text="@string/lorem"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_80" />

        <View
            android:layout_width="75dp"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_height="1dp"
            android:background="@color/grey_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/spacing_small"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="@dimen/spacing_x_small"
                android:src="@drawable/ic_sentiment_satisfied"
                android:tint="@color/red_600" />

            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/rating"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_800" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/grey_800"
                app:srcCompat="@drawable/ic_movie_filter" />

            <TextView
                android:id="@+id/tv_more_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="More Info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_800" />


        </LinearLayout>




    </LinearLayout>

</RelativeLayout>